--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
  - pip install requests
 # command to run tests
 script:
- - python -m unittest TestTriangle
+ - python -m unittest HW4test.py
